--- a/Pandas for Python in Jupyter Notebook.ipynb
+++ b/Pandas for Python in Jupyter Notebook.ipynb
@@ -458,9 +458,9 @@
      "output_type": "stream",
      "text": [
       "Sample of elements:\n",
-      "Yellow     5.0\n",
-      "Purple    20.0\n",
+      "Red       25.0\n",
       "White      NaN\n",
+      "Orange    30.0\n",
       "dtype: float64\n"
      ]
     }
@@ -939,9 +939,9 @@
      "text": [
       "Dataframe:\n",
       "   X  Y  Z\n",
-      "A  5  2  5\n",
-      "B  5  3  5\n",
-      "C  7  5  7\n"
+      "A  3  6  8\n",
+      "B  4  7  6\n",
+      "C  8  8  2\n"
      ]
     }
    ],
@@ -966,9 +966,9 @@
       "Index(['A', 'B', 'C'], dtype='object')\n",
       "\n",
       "Values of DataFrame:\n",
-      "[[5 2 5]\n",
-      " [5 3 5]\n",
-      " [7 5 7]]\n",
+      "[[3 6 8]\n",
+      " [4 7 6]\n",
+      " [8 8 2]]\n",
       "\n",
       "Class of DataFrame: <class 'pandas.core.frame.DataFrame'>\n"
      ]
@@ -992,32 +992,32 @@
      "output_type": "stream",
      "text": [
       "Accessing a specific column (Y)\n",
-      "A    2\n",
-      "B    3\n",
-      "C    5\n",
+      "A    6\n",
+      "B    7\n",
+      "C    8\n",
       "Name: Y, dtype: int32\n",
       "\n",
       "Accessing multiple columns (X and Z)\n",
       "   X  Z\n",
-      "A  5  5\n",
-      "B  5  5\n",
-      "C  7  7\n",
+      "A  3  8\n",
+      "B  4  6\n",
+      "C  8  2\n",
       "\n",
       "Accessing a specific row (B)\n",
-      "X    5\n",
-      "Y    3\n",
-      "Z    5\n",
+      "X    4\n",
+      "Y    7\n",
+      "Z    6\n",
       "Name: B, dtype: int32\n",
       "\n",
       "Accessing a specific row using index (C)\n",
-      "X    7\n",
-      "Y    5\n",
-      "Z    7\n",
+      "X    8\n",
+      "Y    8\n",
+      "Z    2\n",
       "Name: C, dtype: int32\n",
       "\n",
-      "Accessing a specific element (B,Z) using loc: 5\n",
+      "Accessing a specific element (B,Z) using loc: 6\n",
       "\n",
-      "Accessing a specific element (C,Z) using iloc: 7\n"
+      "Accessing a specific element (C,Z) using iloc: 2\n"
      ]
     }
    ],
@@ -1043,9 +1043,8 @@
      "text": [
       "Filtering using between():\n",
       "    X  Y  Z\n",
-      "A  5  2  5\n",
-      "B  5  3  5\n",
-      "C  7  5  7\n",
+      "A  3  6  8\n",
+      "B  4  7  6\n",
       "\n",
       "Checking null values:\n",
       "        X      Y      Z\n",
@@ -1077,9 +1076,9 @@
      "output_type": "stream",
      "text": [
       "Matrix:\n",
-      "[[5 2 5]\n",
-      " [5 3 5]\n",
-      " [7 5 7]]\n",
+      "[[3 6 8]\n",
+      " [4 7 6]\n",
+      " [8 8 2]]\n",
       "\n",
       "Class of Matrix:  <class 'numpy.ndarray'>\n"
      ]
@@ -1327,7 +1326,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1429,6 +1430,12 @@
     }
    ],
    "source": [
+    ">\n",
+    "\n",
+    "> Specify column names\n",
+    "```python\n",
+    "data=pd.read_csv(filepath, names=['Name1','Name2'])\n",
+    "```\n",
     "# MONTHLY EXPENDITURE Dataset\n",
     "url=\"https://raw.githubusercontent.com/jamwine/Data/master/Monthly%20Expenditure.csv\"\n",
     "b=pd.read_csv(url)\n",
@@ -3168,6 +3175,48 @@
     "print('\\nPrinting Information about option:')\n",
     "pd.describe_option('max_rows')\n",
     "pd.set_option(\"precision\",2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading Other Files\n",
+    "\n",
+    "> Different delimiters - tab-separated file (.tsv)\n",
+    "```python\n",
+    "data=pd.read_csv(filepath, sep='\\t')\n",
+    "```\n",
+    ">\n",
+    "\n",
+    "> Different delimiters - space-separated file\n",
+    "```python\n",
+    "data=pd.read_csv(filepath, delim_whitespace=True)\n",
+    "```\n",
+    ">\n",
+    "\n",
+    "> Specify column names\n",
+    "```python\n",
+    "data=pd.read_csv(filepath, names=['Name1','Name2'])\n",
+    "```\n",
+    ">\n",
+    "\n",
+    "> Custom missing values\n",
+    "```python\n",
+    "data=pd.read_csv(filepath, na_values=['NA',99])\n",
+    "```\n",
+    ">\n",
+    "\n",
+    "> Read JSON files as dataframe\n",
+    "```python\n",
+    "data=pd.read_json(filepath)\n",
+    "```\n",
+    ">\n",
+    "\n",
+    "> Write dataframe file to JSON\n",
+    "```python\n",
+    "data.to_json('outfile.json')\n",
+    "```"
    ]
   }
  ],
