--- a/DA Exercises/Yelp.ipynb
+++ b/DA Exercises/Yelp.ipynb
@@ -2516,12 +2516,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>451</th>\n",
-       "      <td>Huntridge Tavern</td>\n",
+       "      <th>453</th>\n",
+       "      <td>Moon Doggies</td>\n",
        "      <td>Dive Bars</td>\n",
        "      <td>Bars</td>\n",
        "      <td>False</td>\n",
-       "      <td>50</td>\n",
+       "      <td>85</td>\n",
        "      <td>4.0</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
@@ -2533,11 +2533,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                 name category_0 category_1  take_out  review_count  stars  \\\n",
-       "451  Huntridge Tavern  Dive Bars       Bars     False            50    4.0   \n",
+       "             name category_0 category_1  take_out  review_count  stars  \\\n",
+       "453  Moon Doggies  Dive Bars       Bars     False            85    4.0   \n",
        "\n",
        "     city_id  state_id       city state  \n",
-       "451       12         2  Las Vegas    NV  "
+       "453       12         2  Las Vegas    NV  "
       ]
      },
      "execution_count": 34,
@@ -2561,17 +2561,17 @@
     {
      "data": {
       "text/plain": [
-       "name            Huntridge Tavern\n",
-       "category_0             Dive Bars\n",
-       "category_1                  Bars\n",
-       "take_out                   False\n",
-       "review_count                  50\n",
-       "stars                          4\n",
-       "city_id                       12\n",
-       "state_id                       2\n",
-       "city                   Las Vegas\n",
-       "state                         NV\n",
-       "Name: 451, dtype: object"
+       "name            Moon Doggies\n",
+       "category_0         Dive Bars\n",
+       "category_1              Bars\n",
+       "take_out               False\n",
+       "review_count              85\n",
+       "stars                      4\n",
+       "city_id                   12\n",
+       "state_id                   2\n",
+       "city               Las Vegas\n",
+       "state                     NV\n",
+       "Name: 453, dtype: object"
       ]
      },
      "execution_count": 35,
@@ -4001,9 +4001,7 @@
     "axes = plt.gca()\n",
     "axes.set_yscale('log')\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   }
  ],
